# rs-sqs-receiver

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
src/: client.rs  errors.rs  lib.rs  main.rs  receiver.rs
src/receiver/: config.rs  functions.rs
tests/: integration_test.rs
